fix alignment

--- a/src/css/LogStream.scss
+++ b/src/css/LogStream.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
 
-  width: 100%;
+  width: min-content;
   height: min-content;
   // height: 100vh;
   // overflow-y: scroll;
